# agent-quant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TRADER_WORKFLOW_CHECKLIST.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  serve.py
app/: main.py
app/agent/: __init__.py  agent_instruction.py  agno_client.py  available_models.py  example_agent.py  trader.py  trader_agent.py
app/alembic/: env.py
app/api/: __init__.py  api.py  deps.py
app/api/routes/: auth.py  post.py  posts.py  prompt.py  user.py  users.py  watchlist.py
app/backtest/: __init__.py  engine.py  equity.py  report.py  run_backtest.py
app/core/: config.py  db.py  deps.py  init_data.py
app/data_feed/: __init__.py  account_position.py  technical_indicator.py
app/data_source/: __init__.py  longport_groups.py  longport_source.py
app/execution/: quant_call.py  workflow_steps.py
app/market/: data_feed.py  longport_source.py  playground.py  talib_calculator.py
app/models/: __init__.py  backtest_daily_equity.py  backtest_run.py  base_model.py  log.py  position.py  post.py  stock.py  trade_account.py  trade_order.py  user.py  virtual_trade_account.py  virtual_trade_order.py  virtual_trade_position.py  virtual_trade_stock.py
app/prompt_build/: __init__.py  account_prompt.py  account_snapshot.py  formatters.py  technical_prompt.py  technical_snapshot.py
app/prompting/: builder.py  system_prompt.md
app/quant/agent/: agno_client.py  playgroud.py  trader.py
app/quant/data_pipeline/: data_feed.py  longport_source.py  playground.py  talib_calculator.py
app/quant/execution/: quant_call.py
app/quant/market/: data_feed.py
app/quant/prompting/: builder.py  system_prompt.md
app/quant/trade/: account.py  order.py
app/scheduler/: __init__.py  jobs.py
app/trade/: account.py  order.py  position.py
app/utils/: converters.py  exceptions.py  logging.py  responses.py  talib_calculator.py  utils.py
app/virtual_trade/: __init__.py  account.py  order.py  position.py
app/workflow/: nof1_workflow.py
app/workflow/steps/: __init__.py  build_prompts.py  execute_trades.py  fetch_account_data.py  fetch_market_data.py  notification.py  risk_check.py  utils.py
docs/: nof1-prompt.md  trader_agent.md
examples/: trader_workflow_example.py
notebooks/: agno.py  akshare.ipynb  longport.ipynb
notebooks/data/: etf.csv
src/: main.py
src/api/: api.py  deps.py
src/api/routes/: accounts.py  auth.py  posts.py  symbols.py  users.py
src/core/: config.py  db.py  deps.py
src/models/: __init__.py  account.py  base_model.py  symbol.py
src/quant/: __init__.py
src/quant/accounts/: __init__.py  models.py  repository.py  services.py
src/quant/agents/: __init__.py  client.py  parsers.py  runners.py
src/quant/backtest/: __init__.py  engine.py  reporter.py
src/quant/core/: __init__.py  event_bus.py  interfaces.py  types.py
src/quant/data_pipeline/: __init__.py  indicators.py  longport_source.py  market_feed.py  snapshots.py  symbols.py  talib_calculator.py
src/quant/execution/: __init__.py  logger.py  order_executor.py  signal_router.py
src/quant/prompting/: __init__.py  agents.py  builder.py  context.py  formatters.py  validators.py
src/quant/scheduler/: __init__.py  jobs.py  notifier.py  trading.py
src/utils/: exceptions.py  responses.py  utils.py
tests/: conftest.py  test_market_data_integration.py
tests/api/routes/: test_post.py
tests/execution/: test_prompt_composer.py
tests/quant/: test_account_repository.py  test_account_service.py  test_agents_deepseek.py  test_agents_parser.py  test_agents_runner.py  test_backtest_engine.py  test_execution_logging.py  test_prompt_builder.py  test_prompt_formatters.py  test_scheduler_jobs.py  test_symbol_registry.py
tests/utils/: __init__.py  auth.py  data.py  user_deps.py
