[project]
name = "Agent-Quant"
version = "0.1.0"
description = "Get data, build prompt, LLM agent trading signal, simulated trading"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.2",
    "granian[dotenv,pname,uvloop,reload]>=2.6.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
    "loguru>=0.7.3",
    "fastapi-users[oauth,sqlalchemy]>=15.0.1",
    "asyncpg>=0.30.0",
    "longport>=3.0.18",
    "ta-lib>=0.6.8",
    "pandas>=2.3.3",
    "quantstats>=0.0.77",
    "apscheduler>=3.10.4",
    "agno[openai]>=2.2.13",

]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "alembic>=1.17.1",
    "aiosqlite>=0.21.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "akshare>=1.17.85",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.workspace]
members = ["git"]

# Ruff
[tool.ruff]
exclude = ["alembic"]
line-length = 100
preview = true
fix = true
unsafe-fixes = true

[tool.ruff.lint]
future-annotations = true
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "I",   # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"


# Pytest
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers", "-s"]
pythonpath = "app"
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: marks tests that hit external services (deselect with '-m \"not integration\"')",
]
