[project]
name = "Agent-Quant"
version = "0.1.0"
description = "Get data, build prompt, LLM agent trading signal, simulated trading"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.123.5",
    "granian[dotenv,pname,uvloop,reload]>=2.6.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
    "loguru>=0.7.3",
    "fastapi-users[oauth,sqlalchemy]>=15.0.1",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.21.0",
    "longport>=3.0.18",
    "akshare>=1.17.90",
    "ta-lib>=0.6.8",
    "pandas>=2.3.3",
    "quantstats>=0.0.77",
    "apscheduler>=3.10.4",
    "agno[openai]>=2.3.13",

]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.1",
    "ruff>=0.14.9",
    "alembic>=1.17.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.workspace]
members = ["git"]

# Ruff
[tool.ruff]
exclude = ["alembic"]
line-length = 100
fix = true
unsafe-fixes = true

[tool.ruff.lint]
future-annotations = true
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "I",    # isort
    "TID",  # tidy imports
    "PTH",  # pathlib
    "RUF",  # Ruff-specific
    "NPY",  # numpy-specific
    "PD",   # pandas-specific
    "FAST", # fastapi-specific
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true


# Pytest
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers", "-s"]
pythonpath = "app"
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: marks tests that hit external services (deselect with '-m \"not integration\"')",
]
